🐛 Images and Paragraphs Overlapping Fix Attempt 3
🐛 Images overlap when viewing site on my phone, try this to see if this fixes the overlapping problem

--- a/css/screen.css
+++ b/css/screen.css
@@ -320,6 +320,7 @@ p:not(.text-overlay) {
     text-align: left;
     font-weight: 400;
     max-width: 900px;
+    word-wrap: break-word;
 }
 
 .blog-navigation {
